# chilsonite

./: Cargo.toml  README.ja.md  README.md  config.toml
.github/workflows/: deploy.yaml
client/: Cargo.toml  client.rs
client/src/: main.rs
common/: payload.rs
common/src/types/: payload.rs
server/: Cargo.toml  server.rs
server/src/: main.rs
