[package]
name = "cicada-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
base64 = "0.21.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
anyhow = "1.0.95"
uuid = { version = "1", features = ["v4"] }
rand = "0.9.0"
dashmap = "6.1.0"
log = "0.4.25"
env_logger = "0.11.6"
url = "2.5.4"
config = "0.15.8"
